--- a/Game/index.html
+++ b/Game/index.html
@@ -1,9 +1,25 @@
- <!DOCTYPE html>
- <html>
-     <head>
-         <meta charset="utf-8">
-     </head>
-     <body>
-         <script src="build/project.bundle.js" charset="utf-8"></script>
-     </body>
- </html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyBwBZ3A5eMlrVG69AfNFAwGKDrNsQoQ_-M",
+            authDomain: "overlevengame.firebaseapp.com",
+            databaseURL: "https://overlevengame.firebaseio.com",
+            projectId: "overlevengame",
+            storageBucket: "",
+            messagingSenderId: "840827447956"
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script src="build/project.bundle.js" charset="utf-8"></script>
+</body>
+
+</html>
